initialize Gitee repo

--- a/LZY/2.Environment Configuration.md
+++ b/LZY/2.Environment Configuration.md
@@ -3,6 +3,14 @@ Created: 2024/10/25 07:13
 done?: 
 exp:
 ---
+##### Overview
+不管在什么平台，配置编程语言的编译运行环境总的来讲就三步：
+- 下载改编成语言相关的SDK包 -> 通常包含该语言默认提供的一些库 和 工具之类的东西
+- 设置环境变量，让系统在任何地方都能很方便的使用SDK中的内容
+- 明确编译命令的使用
+This note will introduce you how to configure the build environments of different programming language which involves the step one and step two. The build commands is introduced in note [[4.Build And Complie]].
+
+---
 ##### C/C++
 NA
 
