--- a/LZY/3.HelloWorld.md
+++ b/LZY/3.HelloWorld.md
@@ -7,8 +7,8 @@ exp: 掌握基本的程序结构 和 相关要求，能够实现一个HelloWorld
 The main purpose of this note is to make a clear sense for the basic structure of different programming languages. After finishing this note, you can begin a program in the basic structure quickly without any remindings.
 What do I need to know about the basic structure of a language?
 1. The Structure of Project Directory, and File name
-2. Basic Program Structure
-3. Code Format
+2. How to organizing all the source files in a project
+3. Basic Code Format
 3. Header file or Import package
 4. The entry of a program if exists
 5. Statement or Expression
@@ -33,7 +33,7 @@ int main(void) //very explicit style of main Function Header
 
 2. Entry of a C program
 - c语言从`mian`函数作为程序入口开始执行
-- Not recommended Usage for main() Header
+- Not recommended Usage for main() Header in C
 ```c
 main()  //original C style, but now, C/C++ has phased out this usage
 int main()  //leaving the parentheses empty means you are remaining silent about whether there are arguments
@@ -45,8 +45,8 @@ void main()  //only works on some system
 
 ---
 ##### C++
-- [x] Is this part well-organized? ✅ 2024-11-12
-
+All the questions in this part if exists are verified in sample code [[Hello_World.c]] and [[Hello_World.cpp]]
+- [ ] Is this part well-organized?
 ```C++
 //C++语言结构
 #include <iostream>  //A preprocessor #include directive 引入cout cin等
@@ -72,10 +72,13 @@ int main(void)   //very explict style of main function header
 | Watcom                | cpp                   |                                                                                                     |
 | Microsoft Visual C++  | cpp, cxx, cc          | DOS doesn't distinguish between uppercase and lowercase.                                            |
 | Freestyle CodeWarrior | cpp, cp, cc, cxx, c++ |                                                                                                     |
-2. Case Sensitive
+2. How to organizing all the source files in a project
+To Be Done
+
+3. Basic Code Format
 C/C++ is ==case sensitive==. that is, it discriminates between uppercase characters and lowercase characters.
 
-3. Header file or Import package
+4. Header file or Import package
 ```c
 #include <iostream>  //#include directive
 ```
@@ -85,7 +88,7 @@ C/C++ is ==case sensitive==. that is, it discriminates between uppercase charact
 - Now the h extension is reserved for the old C header file, whereas C++ header files have no extension, and there are two kinds of C++ header file, such iostream, cmath.
 - The head files whose names begin with `c` represents they are the files converted from C head files.
 
-4. The entry of a C++ program
+5. The entry of a C++ program
 - A standalone C/C++ program always begins at the beginning of the ==main() function==.
 - Not recommended usage for main() header
 ```c
@@ -94,18 +97,17 @@ int main()  //leaving the parentheses empty means the main() function takes no i
 void main()  //only works on some system, and it's not part of C++ Standard
 ```
 
-5. Statement or Expression
+6. Statement or Expression
 - Each complete instruction is called a ==statement== and a statement represents an action to be taken, you must terminate each statement with a ==semicolon";"==.
 - In some languages, they use Statement separator to separate one statement from the next, but C++, like C, uses a semicolon as a terminator rather as a separtor, which means that the semicolon is acting as a terminator and is ==part of the statement== rather than a marker between statements. That's why, In C/C++, you can not omit the semicolon for each statement.
 
-6. Return Value and return type
+7. Return Value and return type
 - The primary rule is that the `return type` of a function must align with the `return value` it provides.
 - In C, if the `main` function omits the `return value` , the `return type` can be either `void` or `int`.
-- In C++, If the compiler reaches the end of mian() without encountering a return statement, the effect will be the same as if you ended main() with the statement: `return 0;`, which is only provided for main() and not for other function. -> this is the reason why the return type of main() in C++ cannot be void 
-- In C, ==the return type== can be either void or int if return statement doesn't exist in main function, However, It can only be int in C++. Ref to [[Hello_World.c]] and [[Hello_World.cpp]]
+- In C++, If the compiler reaches the end of mian() without encountering a return statement, the effect will be the same as if you ended main() with the statement: `return 0;`, which is only provided for main() and not for other function. -> this is the reason why the return type of main() in C++ cannot be `void`
+- In C, ==the return type== can be either void or int if return statement doesn't exist in main function, However, It can only be int in C++. Ref to sample code [[Hello_World.c]] and [[Hello_World.cpp]]
 - `main()`'s return value is returned not to another part of the program but to the ==operating system==.
 - The normal convention is that an exit value of zero means the program ran successfully, whereas a nonzero value means there was a problem.
-
 
 ---
 ##### Go
