--- a/LZY/4.Build And Complie.md
+++ b/LZY/4.Build And Complie.md
@@ -22,7 +22,7 @@ Originally, the Unix CC command invoked `cfront`, which translated C++ source co
 个人理解，gcc根据运行环境可以大致分成两种：交叉编译、Host主机编译
 交叉编译工具链是指在宿主机的环境下，使用交叉编译工具编译C源码生成能在目标系统环境下运行的可执行文件，比如在windows环境下使用交叉编译工具编译C源码，生成可以在linux环境下运行的可执行文件。再比如64位x86_64 linux系统环境下，编译生成32位 arm架构 linux系统环境下的可执行文件。
 Host编译是指适配各个操作系统的编译工具，比如在windows环境下，使用对应的编译工具可以生成在windows环境下运行的可执行文件。
-交叉编译工具可以参考：[[KLG/Tools/交叉编译工具链/制作buildroot外部交叉编译工具链|制作buildroot外部交叉编译工具链]]
+交叉编译工具可以参考笔记：[[KLG/Tools/交叉编译工具链/制作buildroot外部交叉编译工具链|制作buildroot外部交叉编译工具链]]
 windows编译环境配置可以参考： https://blog.csdn.net/qq_42417071/article/details/137438374 
 For the Windows environment, the direct configuration link is https://www.msys2.org/
 
@@ -70,7 +70,7 @@ readelf xx.out
 
 4. 链接
 - [x] 为什么链接的是二进制文件，而不是汇编文件呢？
-	二进制文件可以隐藏源码真实的实现，在C语言设计中，C程序通常需要链接外部的静态库 或 动态库，而这些库文件通常就是以二进制文件的形式给出的，所以链接的是二进制文件 而不是汇编文件
+二进制文件可以隐藏源码真实的实现，在C语言设计中，C程序通常需要链接外部的静态库 或 动态库 或一些私人库，而这些库文件通常就是以二进制文件的形式给出的，所以链接的是二进制文件 而不是汇编文件
 ![[C执行过程|500]]
 将 各个 目标文件 链接成可执行文件(a.out)
 - [x] 链接命令可以同时链接.o和.c文件吗？gcc会不会自动先把.c编译成.o再链接？ ✅ 2024-10-12
@@ -116,7 +116,7 @@ main()函数的变量释放遵循后申请先释放原则。
 ---
 ##### Rust
 1. rustc
-- 运行rust程序前，必须先编译，编译命令：`rustc xxx.rs` -> 这个和`javac`相同
+- 运行rust程序前，必须先编译，编译命令：`rustc xxx.rs` -> 这个和`javac`类似
 - 编译后生成一个二进制文件，在wins上还会生成一个.pdb文件，里面包含调试信息
 - Rust是Ahead-of-time编译语言
 	可以先编译程序，然后把可执行文件交给别人运行（无需安装Rust)
