--- a/LZY/5.Create A New Variable.md
+++ b/LZY/5.Create A New Variable.md
@@ -48,6 +48,7 @@ int i, j = 4, k; //结合使用
 
 ---
 ##### Rust
+- [ ] Is this part well organized?
 1. The Basic rule of declaring a variable
 在Rust中，使用`let`关键字声明一个变量，变量默认是不可变的(immutable)，若要创建一个可变变量，需要使用`mut`关键字。
 ```Rust
@@ -104,6 +105,7 @@ Rust默认将整型识别为`i32`类型，将浮点数识别为`f64`类型
 
 ---
 ##### Go
+- [ ] Is this part well organized?
 All the questions are verified in code:  
 1. The rule of declaring a variable
 There are two kinds of methods in declaring a variable
@@ -194,6 +196,7 @@ Java声明变量的方式和C/C++相同
 
 ---
 ##### Cangjie
+- [ ] Is this part well organized?
 1. The Basic rule of declaring a variable
 In Cangjie, the data type of a variable can be automatically inferred, allowing it to be ommited when creating variables. Thus, using specific keywords is necessary for variable creation.
 Cangjie provides two types of basic variables: mutable and immutable. The keyword `let` is used to create an immutable variables, which is equivalent to a constant in Cangjie, while the keyword `var` is used for mutable variables.
